<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@mipmap/ic_stat_home"
            android:title="@string/count"/>

        <item
            android:id="@+id/menu_label"
            android:icon="@mipmap/ic_stat_menu_label"
            android:title="@string/label"/>

        <item
            android:id="@+id/menu_widgets"
            android:icon="@mipmap/ic_stat_widgets"
            android:title="@string/widgets"/>

        <item
            android:id="@+id/menu_color"
            android:icon="@mipmap/ic_stat_color"
            android:title="@string/main_color"/>

        <item
            android:id="@+id/menu_stars"
            android:icon="@mipmap/ic_stat_stars"
            android:title="@string/pre_version"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@mipmap/ic_stat_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/menu_about"
            android:icon="@mipmap/ic_stat_error"
            android:title="@string/about"/>

        <item
            android:id="@+id/menu_help"
            android:icon="@mipmap/ic_stat_announcement"
            android:title="@string/help"/>
    </group>

</menu>